--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Octocat's homepage
+title: Homepage
 description: Sharing cloud knowledge, best practices, and hands-on tutorials for Microsoft Azure, Kubernetes, DevOps, and Cloud-Native solutions. Learn from real-world projects, tips, and personal experience.
