--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,30 +1,31 @@
-name: github pages
+name: Deploy Hugo site to GitHub Pages (main/docs)
 
 on:
   push:
     branches:
-      - main  # or "master" if your default branch is master
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout main branch
         uses: actions/checkout@v4
 
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.147.0'  # or latest Hugo version
+          hugo-version: '0.147.0'
           extended: true
 
-      - name: Build
-        run: hugo --minify
+      - name: Build Hugo site
+        run: hugo --minify --destination docs
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          publish_branch: gh-pages
+      - name: Commit and Push to docs folder
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add docs
+          git commit -m "Deploy Hugo site to GitHub Pages" || echo "No changes to commit"
+          git push origin main
