--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,17 +18,17 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v3
         with:
-          hugo-version: '0.147.8' # your version (check with hugo version)
+          hugo-version: '0.147.8'
 
       - name: Build Hugo site
         run: hugo --minify --destination docs
 
       - name: Deploy 🚀
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs
           git commit -m "Deploy Hugo site to GitHub Pages" || echo "No changes to commit"
-          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/KasdevTech/kasdevTech.github.io.git main
+          git push https://x-access-token:$GH_PAT@github.com/KasdevTech/kasdevTech.github.io.git main
