--- a/hugo.toml
+++ b/hugo.toml
@@ -4,17 +4,44 @@ title = 'kasdevTech - Cloud | Azure | DevOps | AI'
 theme = 'PaperMod'
 
 [params]
-  homeInfoParams = { Title = "Welcome to kasdevTech 🚀", Content = "Cloud | Azure | DevOps | Kubernetes | AI" }
+  homeInfoParams = { 
+    Title = "Welcome to kasdevTech 🚀", 
+    Content = "Cloud | Azure | DevOps | Kubernetes | AI" 
+  }
 
 [menu]
+  [[menu.main]]
+    identifier = "azure"
+    name = "Azure"
+    url = "/azure/"
+    weight = 1
+
+  [[menu.main]]
+    identifier = "terraform"
+    name = "Terraform"
+    url = "/terraform/"
+    weight = 2
+
+  [[menu.main]]
+    identifier = "finops"
+    name = "FinOps"
+    url = "/finops/"
+    weight = 3
+
+  [[menu.main]]
+    identifier = "devops"
+    name = "DevOps"
+    url = "/devops/"
+    weight = 4
+
   [[menu.main]]
     identifier = "blog"
     name = "Blog"
     url = "/posts/"
-    weight = 1
+    weight = 5
 
   [[menu.main]]
     identifier = "about"
     name = "About"
     url = "/about/"
-    weight = 2
+    weight = 6
