--- a/hugo.toml
+++ b/hugo.toml
@@ -3,9 +3,37 @@ languageCode = 'en-us'
 title = 'kasdevTech - Cloud | Azure | DevOps | AI'
 theme = 'PaperMod'
 
+[params]
+  env = "production"
+  title = "kasdevTech - Cloud | Azure | DevOps | AI"
+  description = "Learn Azure, Terraform, FinOps, DevOps, and AI with real-world examples"
+  author = "Kasi Suresh"
+  ShowReadingTime = true
+  ShowToc = true
+  TocOpen = true
+  ShowBreadCrumbs = true
+  ShowPostNavLinks = true
+  ShowShareButtons = true
+  ShowCodeCopyButtons = true
+  disableSpecial1stPost = false
+  ShowLastMod = true
+  defaultTheme = "light"
+
 [params.homeInfoParams]
-  Title = "Welcome to kasdevTech 🚀"
-  Content = "Cloud | Azure | DevOps | Kubernetes | AI"
+  Title = "Hi 👋, I’m Kasi Suresh"
+  Content = "Welcome to **kasdevTech** — a blog on Azure Cloud, Terraform, FinOps, DevOps, and AI 🚀"
+
+[[params.socialIcons]]
+  name = "linkedin"
+  url = "https://linkedin.com/in/your-profile"
+
+[[params.socialIcons]]
+  name = "github"
+  url = "https://github.com/KasdevTech"
+
+[[params.socialIcons]]
+  name = "twitter"
+  url = "https://twitter.com/your-twitter"
 
 [menu]
 
@@ -44,3 +72,7 @@ theme = 'PaperMod'
     name = "About"
     url = "/about/"
     weight = 6
+
+[markup]
+  [markup.highlight]
+    noClasses = false
