--- a/hugo.toml
+++ b/hugo.toml
@@ -16,7 +16,7 @@ theme = 'PaperMod'
   ShowShareButtons = true
   ShowCodeCopyButtons = true
   ShowLastMod = true
-  defaultTheme = "light"
+  defaultTheme = "auto"
   disableSpecial1stPost = false
 
 # 🚀 SHOW POSTS on HOME (no profileMode)
