--- a/hugo.toml
+++ b/hugo.toml
@@ -20,7 +20,7 @@ theme = 'PaperMod'
   defaultTheme = "auto"
   disableSpecial1stPost = false
   homeInfoMode = "auto"  # ✅ show latest articles from all sections
-  mainSections = ["posts", "Azure", "AI", "Terraform", "Finops", "Devops"]  # ✅ list all folders
+  mainSections = ["Azure", "AI", "Terraform", "Finops", "Devops"]  # ✅ list all folders
 
 [params.homeInfoParams]
   Title = "Welcome to KasdevTech 🚀"
@@ -69,7 +69,7 @@ theme = 'PaperMod'
   [[menu.main]]
     identifier = "blog"
     name = "All Posts"
-    url = "/posts/"
+    url = "/"
     weight = 6
 
   [[menu.main]]
