--- a/hugo.toml
+++ b/hugo.toml
@@ -19,7 +19,7 @@ theme = 'PaperMod'
   ShowLastMod = true
   defaultTheme = "auto"
   disableSpecial1stPost = false
-
+  mainSections = ["Azure", "Terraform", "Finops", "Devops", "AI"]
  
 [params.homeInfoParams]
   Title = "Welcome to KasdevTech 🚀"
