--- a/hugo.toml
+++ b/hugo.toml
@@ -34,6 +34,15 @@ theme = 'PaperMod'
   Title = "Welcome to KasdevTech 🚀"
   Content = '''A blog on Azure Cloud, Terraform, FinOps, DevOps, and AI'''
 
+[params.profileMode]
+  enabled = true
+  title = "Kasi Suresh"
+  subtitle = "Cloud Solution Architect | Azure | DevOps | AI"
+  buttons = [
+    { name = "About", url = "/about/" },
+    { name = "GitHub", url = "https://github.com/KasdevTech" }
+  ]
+
 [[params.socialIcons]]
   name = "linkedin"
   url = "https://linkedin.com/in/kasi-suresh-992675177"
