--- a/hugo.toml
+++ b/hugo.toml
@@ -33,8 +33,8 @@ summaryLength = 70
 
   [[menu.main]]
   parent = "Azure"
-  name = "AZ-104"
-  url = "/azure/AZ-104/"
+  name = "az-104"
+  url = "/azure/az-104/"
   weight = 1
 
   [[menu.main]]
